Added JWT signing.
